--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <div id="blogContainer"></div>
     <footer style="text-align: center; font-family: 'Courier New', Courier, monospace; font-weight:600;">
         <p>
-            Created by Aman Maurya
+            Created by Aman Maurya.
         </p>
     </footer>
     
